--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "firebase": "^4.1.3",
     "framework7": "^1.5.3",
+    "framework7-icons": "^0.8.9",
     "framework7-react": "^0.9.1",
     "react": "^15.4.2",
+    "react-contenteditable": "^2.0.4",
     "react-dom": "^15.4.2"
   },
   "scripts": {
