--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "react": "^15.4.2",
     "react-contenteditable": "^2.0.4",
     "react-dom": "^15.4.2",
-    "react-moment": "^0.4.2"
+    "react-moment": "^0.4.2",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
