--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framework7-react": "^0.9.1",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-contenteditable": "^2.0.4",
     "react-dom": "^15.4.2",
