--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "react": "^15.4.2",
     "react-contenteditable": "^2.0.4",
     "react-dom": "^15.4.2",
+    "react-ios-switch": "^0.1.10",
+    "react-marquee": "^0.1.1",
     "react-moment": "^0.4.2",
     "react-redux": "^5.0.5",
+    "react-text-marquee": "^1.0.1",
+    "react-toggle-switch": "^2.1.4",
+    "react-upward-marquee": "^1.1.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
