--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "moment-timezone": "^0.5.13",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
+    "react-collapse": "^4.0.2",
     "react-contenteditable": "^2.0.4",
     "react-dom": "^15.4.2",
     "react-ios-switch": "^0.1.10",
     "react-marquee": "^0.1.1",
     "react-moment": "^0.4.2",
+    "react-motion": "^0.5.0",
+    "react-motion-ui-pack": "^0.10.3",
     "react-redux": "^5.0.5",
     "react-text-marquee": "^1.0.1",
     "react-toggle-switch": "^2.1.4",
